Truncate long tag and time names in time item table, fix general responsiveness

--- a/timer/styles/modalStyles/createTagModal.css
+++ b/timer/styles/modalStyles/createTagModal.css
@@ -2,7 +2,8 @@
 #editTagModal .modal-content {
     border-top: 3px solid var(--primary-blue);
     padding: 10px;
-    width: 80%;
+    max-width: 350px;
+    width: 95%;
     background: var(--secondary-background-color);
     color: var(--primary-text);
 }
@@ -16,7 +17,10 @@
     font-size: 22px;
     font-weight: bold;
 }
-
+#createTagModal .modal-body,
+#editTagModal .modal-body {
+    padding: 0px 25px;
+}
 #createTagModal .name-input,
 #editTagModal .name-input {
     width: 95%;
@@ -72,6 +76,7 @@
     font-weight: bold;
     height: 40px;
     width: 70px;
+    margin-bottom: 15px;
 }
 
 #createTagModal .create-tag-btns-container .create-new-tag-btn,
@@ -97,3 +102,33 @@
     color: var(--danger);
     font-weight: bold;
 }
+
+@media screen and (max-width: 350px) {
+    #createTagModal .modal-body,
+    #editTagModal .modal-body {
+        padding: 0px 10px;
+    }
+    #createTagModal .color-select-container .color,
+    #editTagModal .color-select-container .color {
+        height: 32px;
+        width: 32px;
+    }
+}
+@media screen and (max-width: 300px) {
+    #createTagModal .modal-body,
+    #editTagModal .modal-body {
+        padding: 0px;
+    }
+    #createTagModal .color-select-container .color,
+    #editTagModal .color-select-container .color {
+        height: 30px;
+        width: 30px;
+    }
+}
+/* @media screen and (max-width: 300px) {
+    #createTagModal .color-select-container .color,
+    #editTagModal .color-select-container .color {
+        height: 25px;
+        width: 25px;
+    }
+} */
